fix spacing

--- a/index.css
+++ b/index.css
@@ -50,11 +50,13 @@ body {
 
 .profile > h1 {
   font-size: var(calc(var(--font-size) * 1.15));
+  margin-bottom: 0;
 }
 
 .profile > h3 {
   color: var(--green);
   font-size: var(--font-size);
+  margin-top: 8px;
 }
 
 .profile > p {
